# ChangeLog for x11-misc/makedepend
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-misc/makedepend/ChangeLog,v 1.28 2007/02/04 18:11:44 joshuabaergen Exp $

  04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
  makedepend-1.0.0.ebuild:
  Drop mirroring restriction. Thanks to Zhang Le of bug #163088.

  11 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>;
  makedepend-1.0.0.ebuild:
  Update description to be less generic.

  19 Jul 2006; Guy Martin <gmsoft@gentoo.org> makedepend-1.0.0.ebuild:
  Stable on hppa.

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org> makedepend-1.0.0.ebuild:
  Mark 1.0.0 stable on ia64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  makedepend-1.0.0.ebuild:
  ppc/sparc/mips/alpha/arm/sh stable

  30 Jun 2006; Marien Zwart <marienz@gentoo.org>
  files/digest-makedepend-1.0.0, Manifest:
  Fix digest.

  30 Jun 2006; Chris Gianelloni <wolf31o2@gentoo.org>
  makedepend-1.0.0.ebuild:
  Stable on amd64.

  30 Jun 2006; Markus Rothe <corsair@gentoo.org> makedepend-1.0.0.ebuild:
  Stable on ppc64

  30 Jun 2006; Donnie Berkholz <spyderous@gentoo.org>;
  makedepend-1.0.0.ebuild:
  x86 stable.

  14 May 2006; Donnie Berkholz <spyderous@gentoo.org>;
  makedepend-1.0.0.ebuild:
  Yet another bad digest because of changing tarballs. Reported by johey on
  freenode.

  31 Mar 2006; Diego Pettenò <flameeyes@gentoo.org>
  makedepend-1.0.0.ebuild:
  Add ~x86-fbsd keyword.

  09 Mar 2006; Aron Griffis <agriffis@gentoo.org> makedepend-1.0.0.ebuild:
  Mark 1.0.0 ~ia64

  14 Feb 2006; Markus Rothe <corsair@gentoo.org> makedepend-1.0.0.ebuild:
  Added ~ppc64

  31 Jan 2006; Rene Nussbaumer <killerfox@gentoo.org>
  makedepend-1.0.0.ebuild:
  Unstable on hppa.

  26 Dec 2005; Joshua Baergen <joshuabaergen@gentoo.org>
  -makedepend-0.99.3.ebuild:
  Pull old versions.

  26 Dec 2005; Stefaan De Roeck <stefaan@gentoo.org>
  makedepend-1.0.0.ebuild:
  Marked ~alpha
