@@ -1,16 +1,24 @@
-DIST makedepend-1.0.0.tar.bz2 103213 RMD160 319cc87dd82523b5a7a3ba8bd0970589fc9b0207 SHA1 27c290d5922d535fc450ff1b18d6222f4bb2c94d SHA256 d2be3c940ee48b0e9e5c63025993162bc144d48923d28565450fb1dca52d140a
+DIST makedepend-1.0.0.tar.bz2 103239 RMD160 4e4684f04734bf5bcd0b47c82a2739eedcfa2d3c SHA1 7b6cc1e95f48470b8ec2344b73e4e8d1a0593d07 SHA256 2aaf43b70b41edb2b0b1c7f26163999e16555bcc125f260895207fab53bc7ae7
+DIST makedepend-1.0.1.tar.bz2 108276 RMD160 3481455a0d24d36940cc94d31ff1485a2b909da2 SHA1 c795cdc754d8c9c73e6a310e41eab37c5ab867bf SHA256 b752ad9f210f82d480c8bf397d62649a4306a5534bc38ae7765b9bfbd416b1d2
 EBUILD makedepend-1.0.0.ebuild 481 RMD160 0f75268ef0a13f48479b254a0b9efe8a6e2d5fc1 SHA1 29d5aa198f1af419a88b2a99c642bf7d562495d1 SHA256 bbc20dfa436c80a86b2a03fa4b9b54720889268a75fdcc6f7b917c054ca09eb1
 MD5 597974ea4872f47707d97a88ae52769e makedepend-1.0.0.ebuild 481
 RMD160 0f75268ef0a13f48479b254a0b9efe8a6e2d5fc1 makedepend-1.0.0.ebuild 481
 SHA256 bbc20dfa436c80a86b2a03fa4b9b54720889268a75fdcc6f7b917c054ca09eb1 makedepend-1.0.0.ebuild 481
-MISC ChangeLog 3444 RMD160 896dc0963c8905a5a31cca5abc48736aa5d1b0dd SHA1 471c1b3b8bed9f2ff1d8924320db112171f961a1 SHA256 e4d00bb4aa3e98745c6b58f2425af1a9e301ab92f3cb321e5d7a5068dca330dc
-MD5 63409847a371ac4c6be609f487101b89 ChangeLog 3444
-RMD160 896dc0963c8905a5a31cca5abc48736aa5d1b0dd ChangeLog 3444
-SHA256 e4d00bb4aa3e98745c6b58f2425af1a9e301ab92f3cb321e5d7a5068dca330dc ChangeLog 3444
+EBUILD makedepend-1.0.1.ebuild 493 RMD160 982da67d89ffa254bbd52028cf16e386ef09e238 SHA1 437033f837b27c2f532123e9bb7cb5d1ea5ec8a1 SHA256 f9219cadb592a4a67334f7ef483031e9d130e2307918239a3101aeb92a5ab494
+MD5 fd0e8790b78ed7744b4812846e49c181 makedepend-1.0.1.ebuild 493
+RMD160 982da67d89ffa254bbd52028cf16e386ef09e238 makedepend-1.0.1.ebuild 493
+SHA256 f9219cadb592a4a67334f7ef483031e9d130e2307918239a3101aeb92a5ab494 makedepend-1.0.1.ebuild 493
+MISC ChangeLog 3658 RMD160 f95b85013527413602c4698bc896da1320825f54 SHA1 8c6d3d65f92465c20105dc6f67e9f0821fb20c23 SHA256 03f83808ec70ab9b5b11a4597a38a0e52d05c02fe97c19bc19dd938586189438
+MD5 1c8302b5f913fb38347473ccfb859462 ChangeLog 3658
+RMD160 f95b85013527413602c4698bc896da1320825f54 ChangeLog 3658
+SHA256 03f83808ec70ab9b5b11a4597a38a0e52d05c02fe97c19bc19dd938586189438 ChangeLog 3658
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
 MD5 a37bab73e2f24b213932c30997d3d360 metadata.xml 156
 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 metadata.xml 156
 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055 metadata.xml 156
-MD5 25a30cdaae43ad3e5d18c048386a4201 files/digest-makedepend-1.0.0 253
-RMD160 9070389d1ebba2e32764e53db8ece50d29264b54 files/digest-makedepend-1.0.0 253
-SHA256 759295bc8dbc927656868b0fba8affc87b0fa8819ce3c051803a16557cefc675 files/digest-makedepend-1.0.0 253
+MD5 94c42052804bdfde1c168a219e014595 files/digest-makedepend-1.0.0 253
+RMD160 66484f05492790ce06c57ad91c4f63799137ec7a files/digest-makedepend-1.0.0 253
+SHA256 dfd1a83fc310c5081080aec1f9fd1ee0b1716b0e6cc097a27d19b65ea30f40a7 files/digest-makedepend-1.0.0 253
+MD5 bfcc84a67aefb3080fa45847406f1df4 files/digest-makedepend-1.0.1 253
+RMD160 06ca930c6a94139a8c269f2501778dfc3c163224 files/digest-makedepend-1.0.1 253
+SHA256 8a7c2e2e43cf92897d4cc126fb0c43a9b3edd6be16bdf4a8eaa133893b1fd31b files/digest-makedepend-1.0.1 253
