@@ -1,3 +1,3 @@
-MD5 fa194caa4f059f5621ed2c5a51efb4d0 makedepend-1.0.0.tar.bz2 103213
-RMD160 319cc87dd82523b5a7a3ba8bd0970589fc9b0207 makedepend-1.0.0.tar.bz2 103213
-SHA256 d2be3c940ee48b0e9e5c63025993162bc144d48923d28565450fb1dca52d140a makedepend-1.0.0.tar.bz2 103213
+MD5 cae97a7abf38ff032ab819253bdd61d5 makedepend-1.0.0.tar.bz2 103239
+RMD160 4e4684f04734bf5bcd0b47c82a2739eedcfa2d3c makedepend-1.0.0.tar.bz2 103239
+SHA256 2aaf43b70b41edb2b0b1c7f26163999e16555bcc125f260895207fab53bc7ae7 makedepend-1.0.0.tar.bz2 103239
