@@ -1,0 +1,3 @@
+MD5 54ab2549d723e51ff2b9cff4d8bf44d1 makedepend-1.0.1.tar.bz2 108276
+RMD160 3481455a0d24d36940cc94d31ff1485a2b909da2 makedepend-1.0.1.tar.bz2 108276
+SHA256 b752ad9f210f82d480c8bf397d62649a4306a5534bc38ae7765b9bfbd416b1d2 makedepend-1.0.1.tar.bz2 108276
