@@ -1,0 +1,18 @@
+# Copyright 1999-2007 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/makedepend/makedepend-1.0.1.ebuild,v 1.1 2007/03/31 14:49:31 joshuabaergen Exp $
+
+EAPI="prefix"
+
+# Must be before x-modular eclass is inherited
+#SNAPSHOT="yes"
+
+inherit x-modular
+
+DESCRIPTION="create dependencies in makefiles"
+
+KEYWORDS="~amd64 ~ia64 ~ppc-macos ~x86 ~x86-macos ~x86-solaris"
+
+RDEPEND=""
+DEPEND="${RDEPEND}
+	x11-proto/xproto"
