@@ -1,6 +1,13 @@
 # ChangeLog for x11-misc/makedepend
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/makedepend/ChangeLog,v 1.28 2007/02/04 18:11:44 joshuabaergen Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/makedepend/ChangeLog,v 1.29 2007/03/31 14:49:31 joshuabaergen Exp $
+
+*makedepend-1.0.1 (31 Mar 2007)
+
+  31 Mar 2007; Joshua Baergen <joshuabaergen@gentoo.org>
+  +makedepend-1.0.1.ebuild:
+  Version bump.  Fixes a possible NULL dereference and manpage locations for
+  some platforms.
 
   04 Feb 2007; Joshua Baergen <joshuabaergen@gentoo.org>
   makedepend-1.0.0.ebuild:
